--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,6 @@
         android:theme="@style/Theme.AIC601project"
         tools:targetApi="31">
         <activity
-            android:name=".R4.PhysicianR4Activity"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -24,10 +21,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".R1_R2.AdminR1Activity"
+            android:name=".R1_R2.AdminMainActivity"
             android:exported="false" />
         <activity
-            android:name=".R1_R2.AdminMainActivity"
+            android:name=".R1_R2.AdminR1Activity"
+            android:exported="false" />
+
+        <activity
+            android:name=".R3_R8.PhysicianR4Activity"
             android:exported="false" />
 
         <meta-data
