--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:theme="@style/Theme.AIC601project"
         tools:targetApi="31">
         <activity
+            android:name=".R9_R10.UserR9MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".R9_R10.UserNotificationActivityR9"
+            android:exported="false" />
+        <activity
+            android:name=".R9_R10.UserAppointmentsInfoActivityR9"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
