--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
             android:name=".R1_R2.AdminR1Activity"
             android:exported="false" />
         <activity
+            android:name=".R1_R2.AdminR2Activity"
+            android:exported="false" />
+        <activity
             android:name=".R3_R8.PhysicianMainActivity"
             android:exported="false" />
         <activity
