R4: Initial setup of physician appointments history log activity. Additionally adds a new activity that displays detailed information about a specific physician appointment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.AIC601project"
         tools:targetApi="31">
         <activity
+            android:name=".R3_R8.AppointmentInformationView"
+            android:exported="false" />
+        <activity
+            android:name=".R3_R8.PhysicianR4AppointmentLogHistory"
+            android:exported="false" />
+        <activity
             android:name=".R9_R10.UserR9NotificationsActivity"
             android:exported="false" />
         <activity
