--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,11 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.AIC601project"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true">
-        >
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
         <activity
             android:name=".R3_R8.AppointmentInformationView"
             android:exported="false" />
@@ -41,7 +40,10 @@
             android:name=".R1_R2.AdminMainActivity"
             android:exported="false" />
         <activity
-            android:name=".R1_R2.AdminR1Activity"
+            android:name=".R1_R2.AdminR1Activity1"
+            android:exported="false" />
+        <activity
+            android:name=".R1_R2.AdminR1Activity2"
             android:exported="false" />
         <activity
             android:name=".R1_R2.AdminR2Activity"
