--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".R3_R8.PhysicianR7Activity2"
+            android:exported="false" />
+        <activity
+            android:name=".R3_R8.PhysicianActivityR71Adapter"
+            android:exported="false" />
+        <activity
+            android:name=".R3_R8.PhysicianR7Activity1"
+            android:exported="false" />
+        <activity
             android:name=".R3_R8.AppointmentInformationView"
             android:exported="false" />
         <activity
