--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AIC601project"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".R9_R10.UserR10Activity"
+            android:exported="false" />
         <activity
             android:name=".R3_R8.PhysicianR7Activity2"
             android:exported="false" />
