--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -16,38 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".R9_R10.UserR10Activity"
-            android:exported="false" />
-        <activity
-            android:name=".R3_R8.PhysicianR7Activity2"
-            android:exported="false" />
-        <activity
-            android:name=".R3_R8.PhysicianR7Activity1Adapter"
-            android:exported="false" />
-        <activity
-            android:name=".R3_R8.PhysicianR7Activity1"
-            android:exported="false" />
-        <activity
-            android:name=".R3_R8.R4AppointmentInformationView"
-            android:exported="false" />
-        <activity
-            android:name=".R3_R8.PhysicianR4AppointmentLogHistory"
-            android:exported="false" />
-        <activity
-            android:name=".R9_R10.UserR9NotificationsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".R9_R10.UserR9AppointmentInfoActivity"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".R1_R2.AdminMainActivity"
             android:exported="false" />
@@ -58,20 +35,46 @@
             android:name=".R1_R2.AdminR1Activity2"
             android:exported="false" />
         <activity
-            android:name=".R1_R2.AdminR2Activity"
+            android:name=".R1_R2.AdminR2Activity1"
             android:exported="false" />
         <activity
-            android:windowSoftInputMode="adjustNothing"
-            android:name=".R3_R8.PhysicianMainActivity"
+            android:name=".R1_R2.AdminR2Activity2"
             android:exported="false" />
+
+        <activity
+            android:name=".R3_R8.PhysicianMainActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".R3_R8.PhysicianR4Activity"
             android:exported="false" />
         <activity
-            android:name=".R3_R8.PhysicianR8Activity"
+            android:name=".R3_R8.R4AppointmentInformationView"
             android:exported="false" />
         <activity
+            android:name=".R3_R8.PhysicianR4AppointmentLogHistory"
+            android:exported="false" />
+        <activity
+            android:name=".R3_R8.PhysicianR7Activity1"
+            android:exported="false" />
+        <activity
+            android:name=".R3_R8.PhysicianR7Activity2"
+            android:exported="false" />
+        <activity
+            android:name=".R3_R8.PhysicianR8Activity"
+            android:exported="false" />
+
+        <activity
             android:name=".R9_R10.UserMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".R9_R10.UserR9AppointmentInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".R9_R10.UserR9NotificationsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".R9_R10.UserR10Activity"
             android:exported="false" />
 
         <meta-data
