--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,10 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AIC601project"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".R3_R8.PhysicianR4Activity2"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,16 +47,13 @@
             android:exported="false"
             android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:name=".R3_R8.PhysicianActivityAppointmentInformationView"
+            android:name=".R3_R8.PhysicianR6Activity"
             android:exported="false" />
         <activity
-            android:name=".R3_R8.PhysicianR4Activity"
+            android:name=".R3_R8.PhysicianR4Activity1"
             android:exported="false" />
         <activity
-            android:name=".R3_R8.R4AppointmentInformationView"
-            android:exported="false" />
-        <activity
-            android:name=".R3_R8.PhysicianR4AppointmentLogHistory"
+            android:name=".R3_R8.PhysicianR4Activity3"
             android:exported="false" />
         <activity
             android:name=".R3_R8.PhysicianR7Activity1"
